--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="navbar-fixed ">
 		    <nav>
 		      <div class="nav-wrapper teal darken-3">
-		        <a href="#" class="brand-logo">WORKERS</a>
+		        <a href="#" class="brand-logo">Acai a Casa</a>
 		        <ul class="right hide-on-med-and-down">
 		          <li><a href="#iscriviti">Iscriviti</a></li>
 		          
@@ -52,7 +52,7 @@
 		  <div class="section no-pad-bot" id="index-banner">
 		    <div class="container">
 		      <br>
-		      <h2 class="header center white-text">Inizia la tua carriera nel migliore dei modi </h2>
+		      <h2 class="header center white-text">Scopri l'Acai </h2>
 
 
 		      <div class="sottotitolo">
