--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>WORKERS | Inizia la tua carriera nel migliore dei modi </title>
+  <title>Acai a Casa | Scopri l'Acai e tutti i suoi benefici </title>
 
   <!-- fb open graph-->
 
