--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Acai a Casa | Scopri l'Acai e tutti i suoi benefici </title>
+  <title>ACAI A CASA | Scopri l'Acai e tutti i suoi benefici </title>
 
   <!-- fb open graph-->
 
-		  <meta property="og:url"             content="https://workersitalia.github.io/Workers/index.html" /> 
-		<meta property="og:title"           content="WORKERS | Inizia la tua carriera nel migliore dei modi" /> 
-		<meta property="og:image"           content="https://workersitalia.github.io/Workers/workers-adv.png" /> 
+		  <meta property="og:url"             content="https://scopriacai.github.io/scopriacai/index.html#intro" /> 
+		<meta property="og:title"           content="ACAI A CASA | Scopri l'Acai e tutti i suoi benefici " /> 
+		<meta property="og:image"           content="https://workersitalia.github.io/Workers/IMMAGINEFB.jpg" /> 
 		<meta property="og:description"    content="Non perdere tempo e impara i migliori metodi per creare un CV di successo e prepararti a ottenere il lavoro che desideri con il corso più completo e gratuito!" />
 
 
