--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		  </div>
 		  <br>
 		  <p class="imgintro center ">
-		  <img class="responsive-img-work" src="human-resources.png" width="150" height="150" > </p>
+		  <img class="responsive-img-work" src="acaiacasa.gif" width="150" height="150" > </p>
 
 
 		  <div class="section no-pad-bot" id="index-banner">
